Kubernetes/wordpress/wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/var/www/html"
            name: pv-storage
      volumes:
      - name: pv-storage
        persistentVolumeClaim:
          claimName: site-pvc
