Kubernetes/wordpress/wordpress-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress-svc
spec:
  ports:
  - nodePort: 31000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
  type: NodePort
